# locomote

./: .gitignore  README.md  cfg.in-examples.toml  cfg.out-examples.toml  config.example.toml  config.new.toml  my-file.py  pyproject.toml
cfg-examples/: in-cmd.toml  out-clip.toml  out-gif.toml
locomote/: __init__.py  assets.py  cli.py  clip.py  config.py  frame.py  img.py  parser.py  sequence.py  utils.py  writer.py
locomote/draw/: code.py  window.py
tests/: test_parser.py
