[tool.poetry]
name = "loc-o-motor"
version = "0.1.0"
description = ""
authors = ["Donatas Rasiukevicius <donatas@rasiukevicius.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycarbonsh = "^0.1.3"
pygments = "^2.18.0"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
